SVG graphics aren't rendering correctly in v66 Firefox update
Categories
(Core :: Graphics, defect, P2)
Tracking
()
People
(Reporter: johnhermanstevens, Assigned: bas.schouten)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
167.05 KB,
image/jpeg
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta+
lizzard
:
approval-mozilla-release+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.121 Safari/537.36
Steps to reproduce:
Go to www.tennistv.com circular SVG graphics are rendering incorrectly on Desktop. This happens with search bar and on the menu.
Actual results:
Lines are being rendered coming off at differing angles of circular SVGs
Expected results:
Circles should be complete
Updated•6 years ago
|
Updated•6 years ago
|
Comment 1•6 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=9ac2f47b3cc21276f6d8306175a4f428dcd4378f&tochange=7eac43ea765ebb657f9749a6a8fb2c5c006fae8d
Suspect:
7eac43ea765e Bas Schouten — Bug 1519739: Attempt to create Direct2D paths on the paint thread. r=rhunt
42e89a539b98 Bas Schouten — Bug 1519760: Attempt to initialize D2D off the main thread as much as possible. r=rhunt
a7238b0eac40 Bas Schouten — Bug 1519758: Do not instruct the texture client to clear textures upon allocation on the main thread. r=rhunt
:bas.schouten, your bunch of patch seems to cause the regression.
Can you please look into this?
Comment 2•6 years ago
|
||
[Tracking Requested - why for this release]:
New regression with 66
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Comment 4•6 years ago
|
||
This is a dupe, but I can't find the original bug that was filed :s.
| Assignee | ||
Comment 7•6 years ago
|
||
Can someone make a minimal test case for this by any chance? It probably isn't hard to fix and I'll have a look, but it would probably be easier with something smaller.
Comment 8•6 years ago
|
||
(In reply to Bas Schouten (:bas.schouten) from comment #7)
Can someone make a minimal test case for this by any chance? It probably
isn't hard to fix and I'll have a look, but it would probably be easier with
something smaller.
How about using attached file attachment 9053577 [details] of Bug 1539129?
| Assignee | ||
Comment 10•6 years ago
|
||
(In reply to Alice0775 White from comment #8)
(In reply to Bas Schouten (:bas.schouten) from comment #7)
Can someone make a minimal test case for this by any chance? It probably
isn't hard to fix and I'll have a look, but it would probably be easier with
something smaller.How about using attached file attachment 9053577 [details] of Bug 1539129?
Perfect, sorry, I didn't see that, thanks!
| Assignee | ||
Comment 11•6 years ago
|
||
Comment 13•6 years ago
|
||
Comment 14•6 years ago
|
||
| bugherder | ||
Comment 15•6 years ago
|
||
Bas could you request an uplift to beta please? Thanks
Also, since we have a testcase in comment #8 let's get it verified by QA on nightly before uplifting.
Comment 16•6 years ago
|
||
Bas, what do you think of uplifting to release for 66.0.3? Since there are several duplicate bugs filed I'm assuming many users are noticing this issue.
Comment 17•6 years ago
|
||
Ryan, can you please request uplift to beta and release? I'm waiting on this patch for 66.0.3. Thanks!
| Assignee | ||
Comment 18•6 years ago
|
||
Comment on attachment 9056159 [details]
Bug 1538666: Fix typo in PathCapture::TransformedCopyToBuilder. r=rhunt
Beta/Release Uplift Approval Request
- Feature/Bug causing the regression: Bug 1519739
- User impact if declined: Incorrect circle drawing.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Typo fix.
- String changes made/needed: None
Comment 19•6 years ago
|
||
Comment on attachment 9056159 [details]
Bug 1538666: Fix typo in PathCapture::TransformedCopyToBuilder. r=rhunt
Fix for new regression in 66, looks quite safe.
Not a driver for 66.0.3 but i'm happy to include it.
Comment 20•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Comment 21•6 years ago
|
||
Noted for 66.0.3 as FIXED: Circular SVG graphics now render correctly
Updated•6 years ago
|
Comment 22•6 years ago
|
||
Reproduced the initial issue using old affected Nightly on Windows 7 64bit.
Confirming that the issue is fixed on Firefox 66.0.3 and latest Nightly 68.0a1 on Windows 7 64bit, macOS 10.13.5 and Ubuntu 16.04 32bit (even though I did not reproduce on mac and linux platforms).
Comment 23•6 years ago
|
||
| bugherder uplift | ||
Comment 24•6 years ago
|
||
Also confirming this is fixed on Fx 67.0 across platforms (Ubuntu 16.04 32bit, Windows 10 64bit and macOS 10.13).
Updated•6 years ago
|
Updated•3 years ago
|
Description
•