Bug 1538666: Fix typo in PathCapture::TransformedCopyToBuilder. r=rhunt a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D26335